--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="tm-blue-bg tm-left-column">
                     <div class="tm-logo-div text-xs-center">
                         <img src="img/logo.jpg" alt="Logo">
-                        <h3 class="tm-site-name animated pulse">Synoverge Consultants </h3>
+                        <h3 class="tm-site-name animated pulse">Piparaiya Consultants </h3>
                     </div>
                     <nav class="tm-main-nav">
                         <ul class="tm-main-nav-ul">
